[package]
name = "whale"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = { version = "0.29.0", features = ["crossterm", "serde"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["net", "tracing", "rt-multi-thread", "signal", "macros"] }
url = { version = "2.5.4", features = ["serde"] }
