[package]
name = "bluewhale"
version = "0.0.1"
edition = "2024"
readme = "../README.md"
license = "MIT OR Apache-2.0"
description = "`bluewhale` is a (still very early) Rust SDK for the Docker Hub API v2"
repository = "https://github.com/alvarobartt/bluewhale"
authors = ["Alvaro Bartolome <alvarobartt@gmail.com>"]

[dependencies]
anyhow = "1.0.96"
chrono = { version = "0.4.40", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["net", "tracing", "rt-multi-thread", "signal", "macros"] }
url = { version = "2.5.4", features = ["serde"] }
