[package]
name = "whale-tui"
version = "0.1.0"
edition = "2024"
readme = "README"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alvarobartt/whale"
authors = ["Alvaro Bartolome <alvarobartt@gmail.com>"]

[dependencies]
whale = { path = "../whale" }
clap = { version = "4.5.29", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = { version = "0.29.0", features = ["crossterm", "serde"] }
